[gd_scene load_steps=33 format=2]

[ext_resource path="res://art/Enemies/Skeleton/skeleton_idle_strip6.png" type="Texture" id=1]
[ext_resource path="res://enemies/Skeleton.gd" type="Script" id=2]
[ext_resource path="res://art/Enemies/Skeleton/skeleton_attack_strip7.png" type="Texture" id=3]
[ext_resource path="res://art/Enemies/Skeleton/skeleton_walk_strip8.png" type="Texture" id=4]
[ext_resource path="res://boxes/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://utils/Stats.tscn" type="PackedScene" id=6]
[ext_resource path="res://boxes/Hitbox.tscn" type="PackedScene" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 6.0

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 480, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 576, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 288, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 480, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 576, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 672, 0, 96, 64 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "attack",
"speed": 12.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "walk",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=24]
radius = 6.0
height = 8.0

[sub_resource type="CapsuleShape2D" id=25]
radius = 5.0
height = 8.0

[node name="Skeleton" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )
animation = "attack"
frame = 6
playing = true

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 1, 1 )
shape = SubResource( 24 )

[node name="Stats" parent="." instance=ExtResource( 6 )]
max_health = 5

[node name="SmashPivot" type="Position2D" parent="."]

[node name="SmashHitbox" parent="SmashPivot" instance=ExtResource( 7 )]
collision_mask = 4

[node name="CollisionShape2D" parent="SmashPivot/SmashHitbox" index="0"]
position = Vector2( 17, -1 )
shape = SubResource( 25 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]
[editable path="SmashPivot/SmashHitbox"]
